added nextjs frontend / started with cms

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,10 @@ DATABASE_USERNAME=strapi
 DATABASE_PASSWORD=YOUR_PASSWORD_HERE
 
 
+# MAPBOX
+MAPBOX_ACCESS_TOKEN=pk.xxxxxx
+
+
 # STRAPI
 # shouldn’t be changed
 STRAPI_INTERNAL_HOST=0.0.0.0
@@ -25,3 +29,9 @@ STRAPI_ADMIN_JWT_SECRET=YOUR_TOKEN
 STRAPI_TRANSFER_TOKEN_SALT=YOUR_TOKEN
 STRAPI_JWT_SECRET=YOUR_SECRET
 STRAPI_WEBHOOKS_POPULATE_RELATIONS=true
+STRAPI_SMTP_HOST=HOST
+STRAPI_SMTP_PORT=PORT
+STRAPI_SMTP_USERNAME=blabla@email.com
+STRAPI_SMTP_PASSWORD=password123
+STRAPI_DEFAULT_EMAIL_FROM=blabla@email.com
+STRAPI_DEFAULT_EMAIL_REPLY_TO=replyto@email.com
