added eslint, mapbox, strapi api response transformer plugin, apollo-client.ts

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ DOCKER_CONTAINER_NAMESPACE=diabolo_word
 # DOMAINS
 DOMAIN_CMS=cms.localhost
 DOMAIN_FRONTEND=frontend.localhost
+INTERNAL_CMS_API_DOMAIN=strapi # name of the docker container
 
 
 # DATABASE
@@ -21,8 +22,7 @@ MAPBOX_ACCESS_TOKEN=pk.xxxxxx
 
 
 # STRAPI
-# shouldn’t be changed
-STRAPI_INTERNAL_HOST=0.0.0.0
+STRAPI_INTERNAL_HOST=0.0.0.0 # shouldn’t be changed
 STRAPI_APP_KEYS=APP_KEY_1,APP_KEY_2,APP_KEY_3,APP_KEY_4
 STRAPI_API_TOKEN_SALT=YOUR_TOKEN
 STRAPI_ADMIN_JWT_SECRET=YOUR_TOKEN
@@ -35,3 +35,4 @@ STRAPI_SMTP_USERNAME=blabla@email.com
 STRAPI_SMTP_PASSWORD=password123
 STRAPI_DEFAULT_EMAIL_FROM=blabla@email.com
 STRAPI_DEFAULT_EMAIL_REPLY_TO=replyto@email.com
+STRAPI_API_ACCESS_TOKEN=STRAPI_API_TOKEN
