--- a/services/cms/package.json
+++ b/services/cms/package.json
@@ -9,16 +9,24 @@
         "build": "strapi build",
         "strapi": "strapi"
     },
-    "devDependencies": {},
+    "devDependencies": {
+        "@typescript-eslint/eslint-plugin": "^6.6.0",
+        "@typescript-eslint/parser": "^6.6.0",
+        "eslint": "^8.49.0",
+        "eslint-plugin-react": "^7.33.2",
+        "typescript": "^5.2.2"
+    },
     "dependencies": {
         "@palmabit/strapi-app-version": "^1.1.0",
         "@retikolo/drag-drop-content-types": "^1.3.9",
+        "@strapi/plugin-graphql": "^4.13.3",
         "@strapi/plugin-i18n": "^4.13.1",
         "@strapi/plugin-users-permissions": "^4.13.1",
         "@strapi/provider-email-nodemailer": "^4.13.1",
         "@strapi/strapi": "^4.13.1",
         "pg": "^8.11.3",
-        "sharp": "^0.32.5"
+        "sharp": "^0.32.5",
+        "strapi-plugin-transformer": "^3.1.0"
     },
     "author": {
         "name": "Joseph Ribbe, Coderwesch"
