--- a/services/frontend/Dockerfile
+++ b/services/frontend/Dockerfile
@@ -2,6 +2,10 @@
 FROM node:20
 
 ENV PORT 80
+ENV NEXT_PUBLIC_MAPBOX_ACCESS_TOKEN ${NEXT_PUBLIC_MAPBOX_ACCESS_TOKEN}
+ENV NEXT_PUBLIC_MAPBOX_STYLE_URL ${NEXT_PUBLIC_MAPBOX_STYLE_URL}
+ENV INTERNAL_CMS_GRAPHQL_API_URL ${INTERNAL_CMS_GRAPHQL_API_URL}
+ENV CMS_API_ACCESS_TOKEN ${CMS_API_ACCESS_TOKEN}
 
 # set working directory
 WORKDIR /usr/src/app
