--- a/services/frontend/package.json
+++ b/services/frontend/package.json
@@ -9,19 +9,31 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
-		"@types/node": "20.5.8",
-		"@types/react": "18.2.21",
-		"@types/react-dom": "18.2.7",
-		"autoprefixer": "10.4.15",
-		"eslint": "8.48.0",
+		"@apollo/client": "^3.8.3",
+		"eslint": "^8.49.0",
 		"eslint-config-next": "13.4.19",
-		"react-map-gl": "^7.1.5",
+		"graphql": "^16.8.0",
 		"mapbox-gl": "^2.15.0",
 		"next": "13.4.19",
 		"postcss": "8.4.29",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
+		"react-map-gl": "^7.1.5",
 		"tailwindcss": "3.3.3",
 		"typescript": "5.2.2"
+	},
+	"devDependencies": {
+		"@types/mapbox-gl": "^2.7.13",
+		"@types/node": "20.5.8",
+		"@types/react": "18.2.21",
+		"@types/react-dom": "18.2.7",
+		"@typescript-eslint/eslint-plugin": "^6.6.0",
+		"@typescript-eslint/parser": "^6.6.0",
+		"autoprefixer": "10.4.15",
+		"eslint-config-prettier": "^9.0.0",
+		"eslint-plugin-prettier": "^5.0.0",
+		"eslint-plugin-react": "^7.33.2",
+		"eslint-plugin-tailwindcss": "^3.13.0",
+		"prettier": "^3.0.3"
 	}
 }
