added basic fetching of players / mapbox map / registration page

--- a/.env.example
+++ b/.env.example
@@ -18,7 +18,8 @@ DATABASE_PASSWORD=YOUR_PASSWORD_HERE
 
 
 # MAPBOX
-MAPBOX_ACCESS_TOKEN=pk.xxxxxx
+MAPBOX_ACCESS_TOKEN=pk.xxxxxxx
+MAPBOX_STYLE_URL=mapbox://styles/initiativensucher/clmdbf6z901cb01r7hlbl3m8t
 
 
 # STRAPI
