--- a/services/frontend/package.json
+++ b/services/frontend/package.json
@@ -10,15 +10,19 @@
 	},
 	"dependencies": {
 		"@apollo/client": "^3.8.3",
+		"@tanstack/react-query": "^4.35.3",
 		"eslint": "^8.49.0",
-		"eslint-config-next": "13.4.19",
+		"eslint-config-next": "13.5.2",
 		"graphql": "^16.8.0",
 		"mapbox-gl": "^2.15.0",
-		"next": "13.4.19",
+		"next": "13.5.2",
+		"next-auth": "^4.23.1",
 		"postcss": "8.4.29",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
+		"react-hook-form": "^7.46.2",
 		"react-map-gl": "^7.1.5",
+		"tailwind-merge": "^1.14.0",
 		"tailwindcss": "3.3.3",
 		"typescript": "5.2.2"
 	},
