--- a/services/frontend/package.json
+++ b/services/frontend/package.json
@@ -10,6 +10,7 @@
 	},
 	"dependencies": {
 		"@apollo/client": "^3.8.3",
+		"@hookform/resolvers": "^3.3.1",
 		"@tanstack/react-query": "^4.35.3",
 		"eslint": "^8.49.0",
 		"eslint-config-next": "13.5.2",
@@ -24,7 +25,8 @@
 		"react-map-gl": "^7.1.5",
 		"tailwind-merge": "^1.14.0",
 		"tailwindcss": "3.3.3",
-		"typescript": "5.2.2"
+		"typescript": "5.2.2",
+		"zod": "^3.22.2"
 	},
 	"devDependencies": {
 		"@types/mapbox-gl": "^2.7.13",
