--- a/services/frontend/Dockerfile
+++ b/services/frontend/Dockerfile
@@ -4,6 +4,7 @@ FROM node:20
 ENV PORT 80
 ENV NEXT_PUBLIC_MAPBOX_ACCESS_TOKEN ${NEXT_PUBLIC_MAPBOX_ACCESS_TOKEN}
 ENV NEXT_PUBLIC_MAPBOX_STYLE_URL ${NEXT_PUBLIC_MAPBOX_STYLE_URL}
+ENV NEXT_PUBLIC_CMS_GRAPHQL_API_URL ${NEXT_PUBLIC_CMS_GRAPHQL_API_URL}
 ENV INTERNAL_CMS_GRAPHQL_API_URL ${INTERNAL_CMS_GRAPHQL_API_URL}
 ENV CMS_API_ACCESS_TOKEN ${CMS_API_ACCESS_TOKEN}
 
