--- a/services/frontend/package.json
+++ b/services/frontend/package.json
@@ -6,7 +6,8 @@
 		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
-		"lint": "next lint"
+		"lint": "next lint",
+		"codegen": "graphql-codegen --config codegen.ts"
 	},
 	"dependencies": {
 		"@apollo/client": "^3.8.3",
@@ -25,10 +26,12 @@
 		"react-map-gl": "^7.1.5",
 		"tailwind-merge": "^1.14.0",
 		"tailwindcss": "3.3.3",
-		"typescript": "5.2.2",
+		"typescript": "^5.2.2",
 		"zod": "^3.22.2"
 	},
 	"devDependencies": {
+		"@graphql-codegen/cli": "5.0.0",
+		"@graphql-codegen/client-preset": "4.1.0",
 		"@types/mapbox-gl": "^2.7.13",
 		"@types/node": "20.5.8",
 		"@types/react": "18.2.21",
