--- a/services/frontend/package.json
+++ b/services/frontend/package.json
@@ -24,6 +24,7 @@
 		"react-dom": "18.2.0",
 		"react-hook-form": "^7.46.2",
 		"react-map-gl": "^7.1.5",
+		"react-markdown": "^9.0.0",
 		"tailwind-merge": "^1.14.0",
 		"tailwindcss": "3.3.3",
 		"typescript": "^5.2.2",
@@ -32,6 +33,7 @@
 	"devDependencies": {
 		"@graphql-codegen/cli": "5.0.0",
 		"@graphql-codegen/client-preset": "4.1.0",
+		"@tailwindcss/typography": "^0.5.10",
 		"@types/mapbox-gl": "^2.7.13",
 		"@types/node": "20.5.8",
 		"@types/react": "18.2.21",
