--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 	"license": "MIT",
 	"scripts": {
 		"dev": "docker compose up",
-		"dev:build": "docker compose up --build"
+		"dev:build": "docker compose up --build",
+		"dev:down": "docker compose down"
 	}
 }
