--- a/services/frontend/package.json
+++ b/services/frontend/package.json
@@ -13,6 +13,7 @@
 		"@apollo/client": "^3.8.3",
 		"@hookform/resolvers": "^3.3.1",
 		"@tanstack/react-query": "^4.35.3",
+		"@types/supercluster": "^7.1.2",
 		"eslint": "^8.49.0",
 		"eslint-config-next": "13.5.2",
 		"graphql": "^16.8.0",
@@ -25,9 +26,11 @@
 		"react-hook-form": "^7.46.2",
 		"react-map-gl": "^7.1.5",
 		"react-markdown": "^9.0.0",
+		"supercluster": "^8.0.1",
 		"tailwind-merge": "^1.14.0",
 		"tailwindcss": "3.3.3",
 		"typescript": "^5.2.2",
+		"use-supercluster": "^1.1.0",
 		"zod": "^3.22.2"
 	},
 	"devDependencies": {
