added next-auth and signin / signup

--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,8 @@ DATABASE_PASSWORD=YOUR_PASSWORD_HERE
 MAPBOX_ACCESS_TOKEN=pk.xxxxxxx
 MAPBOX_STYLE_URL=mapbox://styles/initiativensucher/clmdbf6z901cb01r7hlbl3m8t
 
+# FRONTEND
+NEXTAUTH_SECRET= # openssl rand -base64 32
 
 # STRAPI
 STRAPI_INTERNAL_HOST=0.0.0.0 # shouldn’t be changed
