--- a/services/frontend/Dockerfile
+++ b/services/frontend/Dockerfile
@@ -3,6 +3,9 @@ FROM node:20
 
 ENV PORT 80
 ENV NEXT_PUBLIC_MAPBOX_ACCESS_TOKEN ${NEXT_PUBLIC_MAPBOX_ACCESS_TOKEN}
+ENV NEXTAUTH_URL ${NEXTAUTH_URL}
+ENV NEXTAUTH_URL_INTERNAL ${NEXTAUTH_URL_INTERNAL}
+ENV NEXTAUTH_SECRET ${NEXTAUTH_SECRET}
 ENV NEXT_PUBLIC_MAPBOX_STYLE_URL ${NEXT_PUBLIC_MAPBOX_STYLE_URL}
 ENV NEXT_PUBLIC_CMS_GRAPHQL_API_URL ${NEXT_PUBLIC_CMS_GRAPHQL_API_URL}
 ENV INTERNAL_CMS_GRAPHQL_API_URL ${INTERNAL_CMS_GRAPHQL_API_URL}
