--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # DOCKER
-DOCKER_CONTAINER_NAMESPACE=diabolo_word
+DOCKER_CONTAINER_NAMESPACE=juggling_word
 
 
 # DOMAINS
@@ -16,6 +16,8 @@ DATABASE_PORT=5432
 DATABASE_USERNAME=strapi
 DATABASE_PASSWORD=YOUR_PASSWORD_HERE
 
+# generate a cms access token with strapi admin panel
+CMS_ACCESS_TOKEN=YOUR_ACCESS_TOKEN
 
 # MAPBOX
 MAPBOX_ACCESS_TOKEN=pk.xxxxxxx
