--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "diabolo.world",
+	"name": "juggling.world",
 	"description": "THE platform for all jugglers around the world <3. Meet, share, learn!",
 	"version": "1.0.0",
 	"author": "Joseph Ribbe <social@coderwelsch.com>",
