--- a/services/cms/.gitignore
+++ b/services/cms/.gitignore
@@ -1,3 +1,5 @@
+types
+
 ############################
 # OS X
 ############################
@@ -9,7 +11,6 @@ Icon
 .Spotlight-V100
 .Trashes
 ._*
-
 
 ############################
 # Linux
