--- a/package.json
+++ b/package.json
@@ -7,6 +7,6 @@
 	"scripts": {
 		"dev": "docker compose up",
 		"dev:build": "docker compose up --build",
-		"dev:down": "docker compose down"
+		"down": "docker compose down"
 	}
 }
