--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -5,6 +5,7 @@ services:
         container_name: ${DOCKER_CONTAINER_NAMESPACE}_traefik
         image: traefik:v2.10.4
         command:
+            - "--log.level=DEBUG"
             - "--api.insecure=false"
             - "--api.dashboard=true"
             - "--providers.docker=true"
@@ -18,25 +19,23 @@ services:
             - "--certificatesresolvers.traefikresolver.acme.email=social@coderwelsch.com"
             - "--certificatesresolvers.traefikresolver.acme.storage=/letsencrypt/acme.json"
         labels:
-            traefik.enable: true
-            traefik.http.routers.dashboard.rule: Host(`traefik.localhost`)
-            traefik.http.routers.dashboard.service: api@internal
-            traefik.http.routers.dashboard.middlewares: auth
+            - "traefik.enable=true"
+            - "traefik.http.routers.dashboard.rule=Host(`traefik.localhost`)"
+            - "traefik.http.routers.dashboard.service=api@internal"
+            - "traefik.http.routers.dashboard.middlewares=auth"
             # credentials are test/test
-            traefik.http.middlewares.auth.basicauth.users: test:$$apr1$$H6uskkkW$$IgXLP6ewTrSuBkTrqE8wj/
-
+            - "traefik.http.middlewares.auth.basicauth.users: test:$$apr1$$H6uskkkW$$IgXLP6ewTrSuBkTrqE8wj/"
             # low priority rule for otherwise unmatched www. host prefixes
             # without this it is constant redirect
-            traefik.http.routers.unmatchedwww.rule: HostRegexp(`{name:^www\..*}`)
-            traefik.http.routers.unmatchedwww.service: noop@internal
-            traefik.http.routers.unmatchedwww.priority: 2
-
+            - "traefik.http.routers.unmatchedwww.rule=HostRegexp(`{name:^www\..*}`)"
+            - "traefik.http.routers.unmatchedwww.service=noop@internal"
+            - "traefik.http.routers.unmatchedwww.priority=2"
             # lowest priority catchall rule, will add/replace www. host portion
-            traefik.http.routers.matchlast.rule: PathPrefix(`/`)
-            traefik.http.routers.matchlast.priority: 1
-            traefik.http.routers.matchlast.middlewares: addwww
-            traefik.http.middlewares.addwww.redirectregex.regex: ^https://(?:www\.)?(.*)
-            traefik.http.middlewares.addwww.redirectregex.replacement: https://www.$$1
+            - "traefik.http.routers.matchlast.rule: PathPrefix(`/`)"
+            - "traefik.http.routers.matchlast.priority: 1"
+            - "traefik.http.routers.matchlast.middlewares: addwww"
+            - "traefik.http.middlewares.addwww.redirectregex.regex: ^https://(?:www\.)?(.*)"
+            - "traefik.http.middlewares.addwww.redirectregex.replacement: https://www.$$1"
         ports:
             - "443:443"
             - "80:80"
