added www prefix

--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@ DOCKER_CONTAINER_NAMESPACE=juggling_word
 # DOMAINS
 DOMAIN_CMS=cms.localhost
 DOMAIN_FRONTEND=frontend.localhost
-INTERNAL_CMS_API_DOMAIN=strapi # name of the docker container
+DOMAIN_TRAEFIK=traefik.localhost
 
 
 # DATABASE
