--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -29,14 +29,14 @@ services:
             - "traefik.http.middlewares.auth.basicauth.users: test:$$apr1$$H6uskkkW$$IgXLP6ewTrSuBkTrqE8wj/"
             # low priority rule for otherwise unmatched www. host prefixes
             # without this it is constant redirect
-            - "traefik.http.routers.unmatchedwww.rule=HostRegexp(`{name:^www\..*}`)"
+            - "traefik.http.routers.unmatchedwww.rule=HostRegexp(`{name:^www\\..*}`)"
             - "traefik.http.routers.unmatchedwww.service=noop@internal"
             - "traefik.http.routers.unmatchedwww.priority=2"
             # lowest priority catchall rule, will add/replace www. host portion
             - "traefik.http.routers.matchlast.rule: PathPrefix(`/`)"
             - "traefik.http.routers.matchlast.priority: 1"
             - "traefik.http.routers.matchlast.middlewares: addwww"
-            - "traefik.http.middlewares.addwww.redirectregex.regex: ^https://(?:www\.)?(.*)"
+            - "traefik.http.middlewares.addwww.redirectregex.regex: ^https://(?:www\\.)?(.*)"
             - "traefik.http.middlewares.addwww.redirectregex.replacement: https://www.$$1"
         ports:
             - "443:443"
