introduced TRAEFIK_DASHBOARD_AUTH

--- a/.env.example
+++ b/.env.example
@@ -5,8 +5,12 @@ DOCKER_CONTAINER_NAMESPACE=juggling_word
 # DOMAINS
 DOMAIN_CMS=cms.localhost
 DOMAIN_FRONTEND=frontend.localhost
-DOMAIN_TRAEFIK=traefik.localhost
+DOMAIN_TRAEFIK=traefik.localhost # used for traefik dashboard
 
+# TRAEFIK DASHBOARD
+# you can generate credentails here:
+# https://www.web2generators.com/apache-tools/htpasswd-generator
+TRAEFIK_DASHBOARD_AUTH=test:$$apr1$$H6uskkkW$$IgXLP6ewTrSuBkTrqE8wj/
 
 # DATABASE
 DATABASE_CLIENT=postgres
