--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -65,6 +65,7 @@ services:
 
     strapi:
         container_name: ${DOCKER_CONTAINER_NAMESPACE}_strapi
+        restart: unless-stopped
         build:
             context: ./services/cms
             dockerfile: Dockerfile
@@ -108,6 +109,7 @@ services:
 
     frontend:
         container_name: ${DOCKER_CONTAINER_NAMESPACE}_frontend
+        restart: unless-stopped
         build:
             context: ./services/frontend
             dockerfile: Dockerfile
