--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,7 @@ services:
 
     postgres:
         image: postgres:13
+        restart: unless-stopped
         container_name: ${DOCKER_CONTAINER_NAMESPACE}_postgres
         env_file:
             - ./.env
@@ -35,6 +36,7 @@ services:
 
     strapi:
         container_name: ${DOCKER_CONTAINER_NAMESPACE}_strapi
+        restart: unless-stopped
         build:
             context: ./services/cms
             dockerfile: Dockerfile
@@ -77,6 +79,7 @@ services:
 
     frontend:
         container_name: ${DOCKER_CONTAINER_NAMESPACE}_frontend
+        restart: unless-stopped
         build:
             context: ./services/frontend
             dockerfile: Dockerfile
