--- a/services/cms/package.json
+++ b/services/cms/package.json
@@ -10,22 +10,29 @@
         "strapi": "strapi"
     },
     "devDependencies": {
-        "@typescript-eslint/eslint-plugin": "^6.6.0",
-        "@typescript-eslint/parser": "^6.6.0",
-        "eslint": "^8.49.0",
-        "eslint-plugin-react": "^7.33.2",
-        "typescript": "^5.2.2"
+        "@typescript-eslint/eslint-plugin": "6.10.0",
+        "@typescript-eslint/parser": "6.10.0",
+        "eslint": "8.53.0",
+        "eslint-plugin-react": "7.33.2",
+        "typescript": "5.2.2"
     },
     "dependencies": {
-        "@palmabit/strapi-app-version": "^1.1.0",
-        "@retikolo/drag-drop-content-types": "^1.3.9",
-        "@strapi/plugin-graphql": "^4.14.0",
-        "@strapi/plugin-i18n": "^4.14.0",
-        "@strapi/plugin-users-permissions": "^4.14.0",
-        "@strapi/provider-email-nodemailer": "^4.14.0",
-        "@strapi/strapi": "^4.14.0",
-        "pg": "^8.11.3",
-        "sharp": "^0.32.6"
+        "@palmabit/strapi-app-version": "1.1.0",
+        "@retikolo/drag-drop-content-types": "1.3.10",
+        "@strapi/plugin-graphql": "4.15.1",
+        "@strapi/provider-email-nodemailer": "4.15.1",
+        "pg": "8.11.3",
+        "sharp": "0.32.6",
+        "@strapi/strapi": "4.15.2",
+        "@strapi/admin": "4.15.2",
+        "@strapi/plugin-users-permissions": "4.15.2",
+        "@strapi/plugin-i18n": "4.15.2",
+        "@strapi/plugin-cloud": "4.15.2",
+        "better-sqlite3": "8.6.0",
+        "react": "^18.0.0",
+        "react-dom": "^18.0.0",
+        "react-router-dom": "5.3.4",
+        "styled-components": "5.3.3"
     },
     "author": {
         "name": "Joseph Ribbe, Coderwesch"
@@ -34,7 +41,7 @@
         "uuid": "28d2d2cd-a8f5-4fb2-81e0-9e14c250f27d"
     },
     "engines": {
-        "node": ">=16.0.0 <=20.x.x",
+        "node": ">=18.0.0 <=20.x.x",
         "npm": ">=6.0.0"
     },
     "license": "MIT"
