--- a/services/frontend/package.json
+++ b/services/frontend/package.json
@@ -20,6 +20,7 @@
 		"mapbox-gl": "^2.15.0",
 		"next": "13.5.2",
 		"next-auth": "^4.24.4",
+		"next-http-proxy-middleware": "^1.2.6",
 		"postcss": "8.4.29",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
