--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -126,6 +126,7 @@ services:
             NEXT_PUBLIC_MAPBOX_ACCESS_TOKEN: ${MAPBOX_ACCESS_TOKEN}
             NEXT_PUBLIC_MAPBOX_STYLE_URL: ${MAPBOX_STYLE_URL}
             NEXT_PUBLIC_CMS_GRAPHQL_API_URL: https://${DOMAIN_CMS}/graphql
+            NEXT_PUBLIC_CMS_API_URL: http://${DOMAIN_CMS}/api
             INTERNAL_CMS_GRAPHQL_API_URL: http://strapi/graphql
             CMS_API_ACCESS_TOKEN: ${STRAPI_API_ACCESS_TOKEN}
         depends_on:
