--- a/services/frontend/Dockerfile
+++ b/services/frontend/Dockerfile
@@ -8,6 +8,7 @@ ENV NEXTAUTH_URL_INTERNAL ${NEXTAUTH_URL_INTERNAL}
 ENV NEXTAUTH_SECRET ${NEXTAUTH_SECRET}
 ENV NEXT_PUBLIC_MAPBOX_STYLE_URL ${NEXT_PUBLIC_MAPBOX_STYLE_URL}
 ENV NEXT_PUBLIC_CMS_GRAPHQL_API_URL ${NEXT_PUBLIC_CMS_GRAPHQL_API_URL}
+ENV NEXT_PUBLIC_CMS_API_URL ${NEXT_PUBLIC_CMS_API_URL}
 ENV INTERNAL_CMS_GRAPHQL_API_URL ${INTERNAL_CMS_GRAPHQL_API_URL}
 ENV CMS_API_ACCESS_TOKEN ${CMS_API_ACCESS_TOKEN}
 
