--- a/services/frontend/package.json
+++ b/services/frontend/package.json
@@ -38,6 +38,7 @@
 		"@graphql-codegen/cli": "5.0.0",
 		"@graphql-codegen/client-preset": "4.1.0",
 		"@next/eslint-plugin-next": "^14.0.2",
+		"@tailwindcss/forms": "^0.5.7",
 		"@tailwindcss/typography": "^0.5.10",
 		"@types/mapbox-gl": "^2.7.13",
 		"@types/node": "20.5.8",
