--- a/services/frontend/Dockerfile
+++ b/services/frontend/Dockerfile
@@ -1,5 +1,5 @@
 # pull node image
-FROM node:20
+FROM node:20.10-alpine3.18
 
 ENV PORT 80
 ENV NEXT_PUBLIC_MAPBOX_ACCESS_TOKEN ${NEXT_PUBLIC_MAPBOX_ACCESS_TOKEN}
