added env for letsencrypt mail

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # DOCKER
 DOCKER_CONTAINER_NAMESPACE=juggling_word
-
+LETSENCRYPT_EMAIL=email@for.letsencrypt
 
 # DOMAINS
 DOMAIN_CMS=cms.localhost
