--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -19,7 +19,7 @@ services:
             - "--entrypoints.web.http.redirections.entryPoint.scheme=https"
             - "--entrypoints.web.http.tls.certResolver=traefikresolver"
             - "--certificatesresolvers.traefikresolver.acme.tlschallenge=true"
-            - "--certificatesresolvers.traefikresolver.acme.email=social@coderwelsch.com"
+            - "--certificatesresolvers.traefikresolver.acme.email=${LETSENCRYPT_EMAIL}"
             - "--certificatesresolvers.traefikresolver.acme.storage=/letsencrypt/acme.json"
         labels:
             traefik.enable: true
@@ -126,9 +126,10 @@ services:
             NEXT_PUBLIC_MAPBOX_ACCESS_TOKEN: ${MAPBOX_ACCESS_TOKEN}
             NEXT_PUBLIC_MAPBOX_STYLE_URL: ${MAPBOX_STYLE_URL}
             NEXT_PUBLIC_CMS_GRAPHQL_API_URL: https://${DOMAIN_CMS}/graphql
-            NEXT_PUBLIC_CMS_API_URL: http://${DOMAIN_CMS}/api
+            NEXT_PUBLIC_CMS_API_URL: https://${DOMAIN_CMS}/api
             INTERNAL_CMS_GRAPHQL_API_URL: http://strapi/graphql
             CMS_API_ACCESS_TOKEN: ${STRAPI_API_ACCESS_TOKEN}
+            LETSENCRYPT_EMAIL: ${LETSENCRYPT_EMAIL}
         depends_on:
             - strapi
         labels:
