--- a/services/cms/package.json
+++ b/services/cms/package.json
@@ -18,20 +18,20 @@
     },
     "dependencies": {
         "@palmabit/strapi-app-version": "1.1.0",
-        "@strapi/plugin-graphql": "4.15.2",
-        "@strapi/provider-email-nodemailer": "4.15.2",
-        "pg": "8.11.3",
-        "sharp": "0.32.6",
-        "@strapi/strapi": "4.15.2",
-        "@strapi/admin": "4.15.2",
-        "@strapi/plugin-users-permissions": "4.15.2",
+        "@strapi/admin": "4.15.5",
+        "@strapi/plugin-cloud": "4.15.5",
+        "@strapi/plugin-graphql": "4.15.5",
         "@strapi/plugin-i18n": "4.15.2",
-        "@strapi/plugin-cloud": "4.15.2",
-        "better-sqlite3": "8.6.0",
-        "react": "^18.0.0",
-        "react-dom": "^18.0.0",
+        "@strapi/plugin-users-permissions": "4.15.5",
+        "@strapi/provider-email-nodemailer": "4.15.5",
+        "@strapi/strapi": "4.15.5",
+        "pg": "8.11.3",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
         "react-router-dom": "5.3.4",
-        "styled-components": "5.3.3"
+        "sharp": "0.33.0",
+        "strapi-plugin-duplicate-button": "1.1.14",
+        "styled-components": "6.1.1"
     },
     "author": {
         "name": "Joseph Ribbe, Coderwesch"
