--- a/services/cms/package.json
+++ b/services/cms/package.json
@@ -7,7 +7,8 @@
         "develop": "strapi develop",
         "start": "strapi start",
         "build": "strapi build",
-        "strapi": "strapi"
+        "strapi": "strapi",
+        "gen:types": "strapi ts:generate-types"
     },
     "devDependencies": {
         "@typescript-eslint/eslint-plugin": "6.10.0",
