--- a/services/frontend/package.json
+++ b/services/frontend/package.json
@@ -26,6 +26,7 @@
 		"react-confetti-explosion": "^2.1.2",
 		"react-dom": "18.2.0",
 		"react-hook-form": "^7.46.2",
+		"react-hot-toast": "^2.4.1",
 		"react-map-gl": "^7.1.5",
 		"react-markdown": "^9.0.0",
 		"supercluster": "^8.0.1",
