--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"license": "MIT",
 	"scripts": {
 		"dev": "docker compose up",
-		"prod": "docker compose -f docker-compose.prod.yml up -d --build",
+		"prod": "docker compose -f docker-compose.prod.yml up -d --build --remove-orphans",
 		"dev:build": "docker compose up --build",
 		"down": "docker compose down"
 	}
