--- a/.env.example
+++ b/.env.example
@@ -45,3 +45,6 @@ STRAPI_SMTP_PASSWORD=password123
 STRAPI_DEFAULT_EMAIL_FROM=blabla@email.com
 STRAPI_DEFAULT_EMAIL_REPLY_TO=replyto@email.com
 STRAPI_API_ACCESS_TOKEN=STRAPI_API_TOKEN
+
+# META DATA
+META_APP_NAME=juggling.world
