fixed wrong env var name

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -111,7 +111,7 @@ services:
         links:
             - strapi:strapi
         environment:
-            NEXT_PUBLIC_META_APP_NAME: ${NEXT_PUBLIC_META_APP_NAME}
+            NEXT_PUBLIC_META_APP_NAME: ${META_APP_NAME}
             NEXT_PUBLIC_API_URL: https://${DOMAIN_FRONTEND}
             NEXTAUTH_URL: https://${DOMAIN_FRONTEND}
             NEXTAUTH_URL_INTERNAL: http://frontend
